# Trapezoid

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
design/: pinegrow.json
design/_pgbackup/: pinegrow_1658612936.json
testing/: Cargo.toml
testing/src/: main.rs
trapezoid/: Cargo.toml
trapezoid/src/: lib.rs  utils.rs
