[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.0", features = ["cargo"] }
glob = "0.3.0"
normpath = "0.3.2"
trapezoid = { path = "../trapezoid" }