[package]
name = "trapezoid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
walkdir = "2.0"
ignore = "0.4.18"
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = "1.0.58"